--- a/src/app/public/login/login.page.html
+++ b/src/app/public/login/login.page.html
@@ -5,5 +5,32 @@
 </ion-header>
 
 <ion-content>
-<ion-button [routerLink]="['/lugar']">Lugar</ion-button>
+<!-- <ion-button [routerLink]="['/lugar']">Lugar</ion-button> -->
+<!-- <ion-grid>
+	<ion-row>
+		<ion-col>
+			<div class="diva">DIV 1</div>
+		</ion-col>
+	</ion-row>
+	<ion-row>
+		<ion-col>
+			<div class="divb">DIV 2</div>
+		</ion-col>
+	</ion-row>
+	<ion-row>
+		<ion-col>
+			<div class="divc">DIV 3</div>
+		</ion-col>
+	</ion-row>
+	<ion-row>
+		<ion-col> -->
+			<div class="padre">
+			<div class="diva"><img class="imgGaleria" src="../../../assets/icon/catedral4.JPG"></div>
+			<div class="divb"><img class="imgGaleria" src="../../../assets/icon/catedral.jpg"></div>
+			<div class="divc"><img class="imgGaleria" src="../../../assets/icon/catedral3.jpg"></div>
+			<div class="divd"><img class="imgGaleria" src="../../../assets/icon/catedral2.jpeg"></div>
+			</div>
+		<!-- </ion-col>
+	</ion-row>
+</ion-grid> -->
 </ion-content>
