--- a/src/global.scss
+++ b/src/global.scss
@@ -25,8 +25,8 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-// html, body{
-// 	width: 100%;
-// 	height: 100%;
-// 	margin: 0;
-// }
+html,
+body {
+    width: 100%;
+    height: 100%;
+}
