--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button routerLink="/home">
-        home
+        Ir a home
       </ion-button>
     </ion-buttons>
     <ion-title></ion-title>
