pagina lugares e informacion

--- a/src/app/pages/information/information.page.html
+++ b/src/app/pages/information/information.page.html
@@ -1,9 +1,30 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>information</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="information">
+        <ion-icon class="icon-info" slot="end" name="information-outline"></ion-icon>
+       <!--  <ion-buttons>
+            <ion-button (click)="automaticClose = !automaticClose">
+                <ion-icon slot="icon-only" name="close" *ngIf="automaticClose"></ion-icon>
+                <ion-icon slot="icon-only" name="resize" *ngIf="!automaticClose"></ion-icon>
+            </ion-button>
+        </ion-buttons> -->
+    </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
+	<ion-searchbar placeholder=""></ion-searchbar>
+    <ion-list *ngFor="let item of information; let i = index" class="accordion-list" lines="none" detail="false" no-padding>
+        <ion-item tappable (click)="toggleSection(i)" [ngClass]="{'section-active': item.open, 'section': !item.open}" class="item-accordion" color="acorddion">
+            <ion-icon class="info-name" slot="start" name="arrow-forward" *ngIf="!item.open"></ion-icon>
+            <ion-icon class="info-name" slot="start" name="arrow-down" *ngIf="item.open"></ion-icon>
+            <ion-label class="info-name">{{ item.name }}</ion-label>
+        </ion-item>
+        <div *ngIf="item.children && item.open">
+    	<ion-list *ngFor="let child of item.children; let j = index" lines="none" class="child-list">
+    		<ion-item class="item-children">
+            <!-- <ion-icon slot="start" name="add" *ngIf="!child.open"></ion-icon>
+            <ion-icon slot="start" name="close" *ngIf="child.open"></ion-icon> -->
+            <ion-label class="label-child"><b>{{ child.info }}</b> {{ child.number }}</ion-label>
+        </ion-item>
+    	</ion-list>
+    </div>
+    </ion-list>
 </ion-content>
