page more-options

--- a/src/app/pages/circuits/circuits.page.html
+++ b/src/app/pages/circuits/circuits.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>circuits</ion-title>
+  <ion-toolbar color="circuits">
+    <ion-icon class="icon-info" slot="end" name="map"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
