--- a/src/app/pages/favorite/favorite.page.html
+++ b/src/app/pages/favorite/favorite.page.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>favorite</ion-title>
+  <ion-toolbar color="favorite">
+    <ion-icon class="icon-info" slot="end" name="heart"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+<ion-searchbar placeholder=""></ion-searchbar>
 </ion-content>
