--- a/src/app/pages/more-options/more-options.page.html
+++ b/src/app/pages/more-options/more-options.page.html
@@ -1,9 +1,39 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>more-options</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="options">
+    </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
+    <ion-searchbar placeholder=""></ion-searchbar>
+    <ion-grid>
+        <ion-row>
+            <ion-col size="2"><a routerLink="#">
+                    <div class="circulo icon1 sleep"><ion-icon class="icon-options" name="bed"></ion-icon></div>
+                </a> </ion-col>
+                 <ion-col><p class="text">¿Dónde dormir?</p></ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size="2"><a routerLink="#">
+                    <div class="circulo icon2 eat"><ion-icon class="icon-options" name="restaurant"></ion-icon></div>
+                </a></ion-col>
+                <ion-col><p class="text">¿Dónde comer?</p></ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size="2"><a routerLink="#">
+                    <div class="circulo icon3 art"><ion-icon class="icon-options" name="musical-notes"></ion-icon></div>
+                </a></ion-col>
+                <ion-col><p class="text">Arte y cultura</p></ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size="2"><a routerLink="#">
+                    <div class="circulo icon4 events"><ion-icon class="icon-options" name="megaphone"></ion-icon></div>
+                </a></ion-col>
+                <ion-col><p class="text">SJ eventos</p></ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size="2"><a routerLink="#">
+                    <div class="circulo icon5 visits"><ion-icon class="icon-options" name="walk"></ion-icon></div>
+                </a></ion-col>
+                <ion-col><p class="text">Visitas guiadas</p></ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
