--- a/src/app/pages/favorite/favorite.page.html
+++ b/src/app/pages/favorite/favorite.page.html
@@ -1,9 +1,11 @@
 <ion-header>
-  <ion-toolbar color="favorite">
-    <ion-icon class="icon-info" slot="end" name="heart"></ion-icon>
-  </ion-toolbar>
+    <ion-toolbar color="favorite">
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="home" color="back"></ion-back-button>
+        </ion-buttons>
+        <ion-icon class="icon-info" slot="end" name="heart"></ion-icon>
+    </ion-toolbar>
 </ion-header>
-
 <ion-content>
-<ion-searchbar placeholder=""></ion-searchbar>
+    <ion-searchbar placeholder=""></ion-searchbar>
 </ion-content>
