--- a/src/app/pages/more-options/more-options.page.html
+++ b/src/app/pages/more-options/more-options.page.html
@@ -15,7 +15,7 @@
                     </div>
                 </a> </ion-col>
             <ion-col>
-                <p class="text">¿Dónde dormir?</p>
+                <p class="text">¿Dónde Dormir?</p>
             </ion-col>
         </ion-row>
         <ion-row>
@@ -25,7 +25,7 @@
                     </div>
                 </a></ion-col>
             <ion-col>
-                <p class="text">¿Dónde comer?</p>
+                <p class="text">¿Dónde Comer?</p>
             </ion-col>
         </ion-row>
         <ion-row>
@@ -35,7 +35,7 @@
                     </div>
                 </a></ion-col>
             <ion-col>
-                <p class="text">Arte y cultura</p>
+                <p class="text">Arte y Cultura</p>
             </ion-col>
         </ion-row>
         <ion-row>
@@ -45,7 +45,7 @@
                     </div>
                 </a></ion-col>
             <ion-col>
-                <p class="text">SJ eventos</p>
+                <p class="text">SJ Eventos</p>
             </ion-col>
         </ion-row>
         <ion-row>
