--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -24,7 +24,7 @@
         <ion-input name="password" type="password" formControlName="password" ></ion-input>
       </ion-item>
 
-      <ion-item button (click)="signUp()">
+      <ion-item button routerLink='/register'>
         <ion-label color="primary" >Registrarse</ion-label>
       </ion-item>
 
