--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -10,16 +10,16 @@
     <div class="container">
         <img class="logo" src="../../../assets/img/logo.jpg" />
     </div>
-    <ion-img src="assets/img/logo_login.jpeg"></ion-img>
+    
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <ion-list>
             <ion-item class="itemName">
                 <!-- <ion-label position="floating">Email</ion-label> -->
-                <ion-input class="email" name="email" type="email" placeholder="E-mail" [(ngModel)]="email"></ion-input>
+                <ion-input class="email" name="email" type="email" placeholder="E-mail" formControlName="email"></ion-input>
             </ion-item>
             <ion-item>
                 <!--  <ion-label position="floating">Contraseña</ion-label> -->
-                <ion-input class="password" name="password" type="password" placeholder="Contraseña" [(ngModel)]="password"></ion-input>
+                <ion-input class="password" name="password" type="password" placeholder="Contraseña" formControlName="password"></ion-input>
             </ion-item>
             <!-- <ion-item button (click)="signUp()">
         <ion-label color="primary" >Registrarse</ion-label>
