--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -29,6 +29,6 @@
                 <ion-label color="primary" button routerLink='/register'><a class="register">Registrate</a></ion-label>
             </ion-item>
         </ion-list>
-        <ion-button color="dark" expand="block" (click)="signIn()">Iniciar</ion-button>
+        <ion-button color="dark" expand="block"  type="ngSubmit">Iniciar</ion-button>
     </form>
 </ion-content>
